Add branded advertiser reports
